add header and navigation structure to portfolio

--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <script scr="https://kit.fontawesome.com/40152e139e.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="header">
+        <div class="container">
+            <nav>
+                <img src="images/360_F_392609716_BTUMrPmVwJwQpn8I3uQTkskNvYQsU5WV-removebg-preview.png" class="logo">
+                <ul class="sidebar">
+                    <li onclick="hideSidebar(event)"><a href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
+                            <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
+                        </svg>
+                    </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
     
 </body>
 </html>
