add App Design section to services in portfolio

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro et fuga neque accusantium illo architecto cum? Ipsam harum quibusdam similique fugit laudantium ullam vitae labore debitis beatae. Suscipit, est possimus?</p>
                         <a href="#">Learn more</a>
                     </div>
+                    <div>
+                        <i class="fa-brands fa-app-store-ios"></i>
+                        <h2>App Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro et fuga neque accusantium illo architecto cum? Ipsam harum quibusdam similique fugit laudantium ullam vitae labore debitis beatae. Suscipit, est possimus?</p>
+                        <a href="#">Learn more</a>
+                    </div>
                 </div>
             </div>
         </div>
