add sidebar hide functionality to improve user experience

--- a/index.html
+++ b/index.html
@@ -133,6 +133,22 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function hideSidebar(event) {
+            if (event) {
+                event.preventDefault();
+            }
+            const sidebar = document.querySelector('.sidebar');
+            sidebar.style.display = 'none';
+    }
+    </script>
+
+    
+
+
+
+
     
 
 
