add empty style block for future CSS enhancements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <script scr="https://kit.fontawesome.com/40152e139e.js" crossorigin="anonymous"></script>
+    <style>
+        
+    </style>
 </head>
 <body>
     <div id="header">
