--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <script scr="https://kit.fontawesome.com/40152e139e.js" crossorigin="anonymous"></script>
     <style>
         
+        *{
+            margin:0;
+            padding:0;
+            font-family: 'Poppins', sans-serif;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
