--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             font-family: 'Poppins', sans-serif;
             box-sizing: border-box;
         }
+
+        html{
+            scroll-behavior: smooth;
+        }
     </style>
 </head>
 <body>
