--- a/index.html
+++ b/index.html
@@ -17,6 +17,39 @@
         html{
             scroll-behavior: smooth;
         }
+
+        body{
+            background: black;
+            color: white;
+        }
+        
+        #header{
+            width: 100%;
+            height: 100vh;
+            background-image: url(images/275845812_1684508861941461_8889341161060217761_n.jpg);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            padding-top: 80px;
+        }
+
+        .container{
+            padding: 10px 10%;
+        }
+
+        nav{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000;
+            padding: -10px 10%;
+        }
+
     </style>
 </head>
 <body>
