--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
             padding: -10px 10%;
         }
 
+        .logo{
+            width: 140px;
+        }
+
+        nav ul li{
+            display: inline-block;
+            list-style: none;
+            margin: 10px 20px;
+        }
+
     </style>
 </head>
 <body>
