enhance navigation link hover effect for improved user interaction

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
             bottom: -6px;
             transition: 0.5s;
         }
+        nav ul li a:hover::after{
+            width: 100%;
+        }
+
+        .sidebar{
+            
+        }
 
     </style>
 </head>
