--- a/index.html
+++ b/index.html
@@ -97,6 +97,19 @@
             justify-content: flex-start;
         }
 
+        .sidebar li{
+            width: 100%;
+        }
+        
+        .sidebar a{
+            width: 100%;
+        }
+
+        .header-text h1{
+            font-size: 60px;
+            margin-top: 20px;
+        }
+
     </style>
 </head>
 <body>
