add span styling to header text for improved formatting

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
             margin-top: 20px;
         }
 
+        .header-text h1 span{
+            
+        }
+
     </style>
 </head>
 <body>
