--- a/index.html
+++ b/index.html
@@ -111,8 +111,21 @@
         }
 
         .header-text h1 span{
-            
+            color: #c01010;
         }
+
+        #about{
+            padding: 80px 0;
+            color: #ababab;
+        }
+
+        .row{
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        
 
     </style>
 </head>
