--- a/index.html
+++ b/index.html
@@ -431,10 +431,30 @@
                     
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                    <p class="tab-links" onclick="opentab('education')">Education</p>
+                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                        <p class="tab-links" onclick="opentab('education')">Education</p>
                     </div>
-                
+                    <div class="tab-contents active-tab" id="skills">
+                        <ul>
+                            <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
+                            <li><span>Web Development</span><br>Web app Development</li>
+                            <li><span>App Development</span><br>Building Android/ios apps</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="experience">
+                        <ul>
+                            <li><span>2023 - current</span><br>Studied Java Programming at National University Lipa</li>
+                            <li><span>2023 - current</span><br>Learned about if/else statement</li>
+                            <li><span>2023 - current</span><br>Learned looping in Introduction to Programming</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="education">
+                        <ul>
+                            <li><span>2023 - current</span><br>Currently studying at National University with the program of Bachelor of Science in Information Technology with specialization in Mobile and Web Applications</li>
+                            <li><span>2022</span><br>Graduated Senior High School with an average of 94% at Concepcion National High School</li>
+                            <li><span>2020</span><br>Graduated as one of the Special Science Class with an average of 90% at Concepcion National High School</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
