--- a/index.html
+++ b/index.html
@@ -353,10 +353,10 @@
         }
         .menu-button {
             display: none;
-            position: fixed; /* Fix the position */
-            top: 10px; /* Adjust the top position */
-            right: 10px; /* Adjust the right position */
-            z-index: 1000; /* Ensure it stays above other elements */
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
         }
 
         @media (max-width: 800px) {
@@ -384,36 +384,38 @@
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="#header">
+                <img src="images/360_F_392609716_BTUMrPmVwJwQpn8I3uQTkskNvYQsU5WV-removebg-preview.png" alt="Logo" class="logo" style="width: 140px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active" aria-current="page" href="#header">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-bold active" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div id="header">
         <div class="container">
-            <nav>
-                <img src="images/360_F_392609716_BTUMrPmVwJwQpn8I3uQTkskNvYQsU5WV-removebg-preview.png" class="logo">
-                <ul class="sidebar">
-                    <li onclick="hideSidebar(event)"><a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
-                            <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
-                        </svg>
-                    </a>
-                    </li>
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <ul>
-                    <li class="hideOnMobile"><a href="#header">Home</a></li>
-                    <li class="hideOnMobile"><a href="#about">About</a></li>
-                    <li class="hideOnMobile"><a href="#services">Services</a></li>
-                    <li class="hideOnMobile"><a href="#portfolio">Portfolio</a></li>
-                    <li class="hideOnMobile"><a href="#contact">Contact</a></li>
-                    <li class="menu-button" onclick="showSidebar(event)"><a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26" fill="#e3e3e3">
-                        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
-                    </svg>
-                </a></li>
-                </ul>
-            </nav>
             <div class="header-text">
                 <p>UI/UX Designer</p>
                 <h1>Hi, I'm <span>Merrick</span><br>From the Philippines</h1>
